refactored code into services
