# models/linkTokenPayload.go
@@ -1,0 +1,6 @@
+package models
+
+// LinkTokenPayload ...
+type LinkTokenPayload struct {
+	LinkToken string `json:"linkToken"`
+}
