# models/publicTokenPayload.go
@@ -1,0 +1,6 @@
+package models
+
+// TokenPayload ...
+type PublicTokenPayload struct {
+	Token string `json:"public_token"`
+}
