# routes/accounts.go
@@ -1,56 +1,47 @@
 package routes
 
 import (
-	"fmt"
 	"net/http"
-	"strings"
 	"time"
 
-	"github.com/gin-gonic/gin"
-	uuid "github.com/google/uuid"
 	"github.com/lakshay35/finlit-backend/models"
+
+	"github.com/gin-gonic/gin"
 	accountsService "github.com/lakshay35/finlit-backend/services/account"
 	plaidService "github.com/lakshay35/finlit-backend/services/plaid"
-	"github.com/lakshay35/finlit-backend/utils/database"
 	"github.com/lakshay35/finlit-backend/utils/requests"
-	"github.com/plaid/plaid-go/plaid"
 )
 
 // GetAccountInformation ...
-// @Summary Get Get Account Information
+// @Summary Get Account Information
 // @Description Gets account information based on access token
 // @Tags External Accounts
 // @Accept  json
-// @Param account body Account true "Account payload to get informaion on"
+// @Param account body models.Account true "Account payload to get informaion on"
 // @Produce  json
 // @Security Google AccessToken
 // @Success 200 {object} models.PlaidAccount
 // @Failure  400 {object} models.Error
-// @Router /account/get-account-details [get]
+// @Router /account/get-account-details [post]
 func GetAccountInformation(c *gin.Context) {
 
-	var json Account
-	err := c.BindJSON(&json)
+	var json models.Account
+	err := requests.ParseBody(c, &json)
 
 	if err != nil {
-		requests.ThrowError(c, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	institutionalID, accessToken := accountsService.GetExternalAccount(json.ExternalAccountID)
+	account, getAccountInformationError := accountsService.GetAccountInformation(json.ExternalAccountID)
 
-	response, err := plaidService.PlaidClient().GetAccounts(accessToken)
+	if getAccountInformationError != nil {
+		requests.ThrowError(
+			c,
+			getAccountInformationError.StatusCode,
+			getAccountInformationError.Error(),
+		)
 
-	if err != nil {
-		panic(err)
-	}
-
-	var account plaid.Account
-
-	for _, act := range response.Accounts {
-		if strings.EqualFold(act.AccountID, institutionalID) {
-			account = act
-		}
+		return
 	}
 
 	c.JSON(http.StatusOK, account)
@@ -68,6 +59,7 @@ func GetAccountInformation(c *gin.Context) {
 // @Router /account/live-balances [get]
 func GetCurrentBalances(c *gin.Context) {
 	response, err := plaidService.PlaidClient().GetBalances("accessToken")
+
 	if err != nil {
 		requests.ThrowError(
 			c,
@@ -85,41 +77,39 @@ func GetCurrentBalances(c *gin.Context) {
 // @Tags External Accounts
 // @Accept  json
 // @Produce  json
-// @Param body body Account true "Account payload to identify transactions with"
+// @Param body body models.Account true "Account payload to identify transactions with"
 // @Security Google AccessToken
 // @Success 200 {array} models.PlaidTransaction
 // @Failure 403 {object} models.Error
-// @Router /account/transactions [get]
+// @Router /account/transactions [post]
 func GetTransactions(c *gin.Context) {
-	var json Account
-	c.BindJSON(&json)
-
-	// pull transactions for the past 30 days
-	endDate := time.Now().Local().Format("2006-01-02")
-	startDate := time.Now().Local().Add(-30 * 24 * time.Hour).Format("2006-01-02")
-
-	institutionalID, accessToken := accountsService.GetExternalAccount(json.ExternalAccountID)
-
-	response, err := plaidService.PlaidClient().GetTransactions(accessToken, startDate, endDate)
+	var json models.Account
+	err := requests.ParseBody(
+		c,
+		&json,
+	)
 
 	if err != nil {
-		panic(err)
+		return
 	}
 
-	var transactions []plaid.Transaction
+	transactions, transactionsError := accountsService.GetTransactions(
+		json.ExternalAccountID,
+		time.Now().Local().Add(-30*24*time.Hour).Format("2006-01-02"),
+		time.Now().Local().Format("2006-01-02"),
+	)
 
-	for _, tx := range response.Transactions {
-		if strings.EqualFold(tx.AccountID, institutionalID) {
-			transactions = append(transactions, tx)
-		}
+	if transactionsError != nil {
+		requests.ThrowError(
+			c,
+			transactionsError.StatusCode,
+			transactionsError.Message,
+		)
+
+		return
 	}
 
 	c.JSON(http.StatusOK, transactions)
-}
-
-// LinkTokenPayload ...
-type LinkTokenPayload struct {
-	LinkToken string `json:"linkToken"`
 }
 
 // CreateLinkToken ...
@@ -128,24 +118,24 @@ type LinkTokenPayload struct {
 // @Description Creates a link token to setup UI for generating public tokens
 // @Tags External Accounts
 // @Accept  json
-// @Param id path string true "Expense ID (UUID)"
 // @Produce  json
 // @Security Google AccessToken
-// @Success 200 {object} LinkTokenPayload
+// @Success 200 {object} models.LinkTokenPayload
 // @Failure 400 {object} models.Error
-// @Router /budget/create [post]
+// @Router /account/create-link-token [get]
 func CreateLinkToken(c *gin.Context) {
 	linkToken, err := accountsService.LinkTokenCreate(nil)
+
 	if err != nil {
 		requests.ThrowError(
 			c,
-			http.StatusBadRequest,
+			err.StatusCode,
 			err.Error(),
 		)
 		return
 	}
 
-	c.JSON(http.StatusOK, LinkTokenPayload{
+	c.JSON(http.StatusOK, models.LinkTokenPayload{
 		LinkToken: linkToken,
 	})
 }
@@ -159,13 +149,6 @@ func (httpError *httpError) Error() string {
 	return httpError.error
 }
 
-// Account ...
-// Bank Account Integration Entity
-type Account struct {
-	ExternalAccountID uuid.UUID `json:"external_account_id"`
-	AccountName       string    `json:"account_name,omitempty"`
-}
-
 // GetAllAccounts ...
 // @Summary Get all registered external accounts
 // @Description Gets a list of all external accounts registered via Plaid
@@ -173,50 +156,24 @@ type Account struct {
 // @Accept  json
 // @Produce  json
 // @Security Google AccessToken
-// @Success 200 {array} Account
+// @Success 200 {array} models.Account
 // @Failure 403 {object} models.Error
 // @Failure 404 {object} models.Error
 // @Router /account/get [get]
 func GetAllAccounts(c *gin.Context) {
-	connection := database.GetConnection()
-
-	query := "SELECT account_name, external_account_id FROM external_accounts WHERE user_id = $1"
-
-	stmt, err := connection.Prepare(query)
-
-	if err != nil {
-		fmt.Println(err)
-		panic("Error preparing statement to get user bank accounts")
-	}
-
 	user := requests.GetUserFromContext(c)
-
-	rows, err := stmt.Query(user.UserID)
+	accounts, err := accountsService.GetAllExternalAccounts(user.UserID)
 
 	if err != nil {
-		requests.ThrowError(c, http.StatusNotFound, "User has no account registrations")
+		requests.ThrowError(
+			c,
+			err.StatusCode,
+			err.Error(),
+		)
 		return
 	}
 
-	var accounts []Account = make([]Account, 0)
-
-	for rows.Next() {
-		var temp Account
-
-		rows.Scan(&temp.AccountName, &temp.ExternalAccountID)
-
-		if err != nil {
-			panic(err)
-		}
-
-		accounts = append(accounts, temp)
-	}
-
 	c.JSON(http.StatusOK, accounts)
-}
-
-type tokenPayload struct {
-	Token string `json:"public_token"`
 }
 
 // RegisterAccessToken ...
@@ -224,59 +181,37 @@ type tokenPayload struct {
 // @Description Creates a permanent access token based on public token
 // @Tags External Accounts
 // @Accept  json
-// @Param body body tokenPayload true "Token Payload for registering access token"
+// @Param body body models.PublicTokenPayload true "Token Payload for registering access token"
 // @Produce  json
 // @Security Google AccessToken
 // @Success 201
 // @Failure 403 {object} models.Error
 // @Router /account/register-token [post]
 func RegisterAccessToken(c *gin.Context) {
-	var json tokenPayload
+	var json models.PublicTokenPayload
 	err := c.BindJSON(&json)
 
 	if err != nil {
-		panic("Unable to parse tokenpayload '/account/register'")
-	}
-
-	response, err := plaidService.PlaidClient().ExchangePublicToken(json.Token)
-	if err != nil {
-		requests.ThrowError(c, http.StatusBadRequest, err.Error())
+		requests.ThrowError(
+			c,
+			http.StatusBadRequest,
+			err.Error(),
+		)
 		return
 	}
 
-	accessToken := response.AccessToken
+	user := requests.GetUserFromContext(c)
 
-	user, exists := c.Get("USER")
+	accessTokenError := accountsService.RegisterAccessToken(json.Token, user.UserID)
 
-	if !exists {
-		panic("USER NOT FOUND IN CONTEXT")
-	}
-
-	userObj := user.(models.User)
-
-	connection := database.GetConnection()
-
-	defer connection.Commit()
-
-	query := "INSERT INTO external_accounts (institutional_id, access_token, account_name, user_id) VALUES ($1, $2, $3, $4)"
-
-	stmt, err := connection.Prepare(query)
-
-	if err != nil {
-		fmt.Println(err)
-		panic("Something went wrong while preparing query")
-	}
-
-	accounts := accountsService.GetAccountsForAccessToken(accessToken)
-
-	for _, act := range accounts {
-		_, err = stmt.Exec(act.AccountID, accessToken, act.OfficialName+" "+act.Name, userObj.UserID)
-
-		if err != nil {
-			panic("Error occurred when looping over bank accounts from plaid")
-		}
+	if accessTokenError != nil {
+		requests.ThrowError(
+			c,
+			accessTokenError.StatusCode,
+			accessTokenError.Error(),
+		)
+		return
 	}
 
 	c.JSON(http.StatusCreated, nil)
-
 }
